--- a/Views/ShellPage.xaml
+++ b/Views/ShellPage.xaml
@@ -27,6 +27,28 @@
 
 	<!-- Make root transparent so the window Mica backdrop can show through -->
 	<Grid Background="Transparent">
+		<VisualStateManager.VisualStateGroups>
+			<VisualStateGroup x:Name="WindowStates">
+				<VisualState x:Name="WideState">
+					<VisualState.StateTriggers>
+						<AdaptiveTrigger MinWindowWidth="800" />
+					</VisualState.StateTriggers>
+				</VisualState>
+				<VisualState x:Name="NarrowState">
+					<VisualState.StateTriggers>
+						<AdaptiveTrigger MinWindowWidth="1" />
+					</VisualState.StateTriggers>
+					<VisualState.Setters>
+						<Setter Target="TransportControls.Visibility" Value="Collapsed" />
+						<Setter Target="NarrowPrevious.Visibility" Value="Visible" />
+						<Setter Target="NarrowPlayPause.Visibility" Value="Visible" />
+						<Setter Target="NarrowNext.Visibility" Value="Visible" />
+						<Setter Target="FavoriteButton.Visibility" Value="Collapsed" />
+						<Setter Target="QueueButton.Visibility" Value="Collapsed" />
+					</VisualState.Setters>
+				</VisualState>
+			</VisualStateGroup>
+		</VisualStateManager.VisualStateGroups>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="*" />
@@ -77,7 +99,7 @@
 		<NavigationView x:Name="RootNavigationView"
                         Grid.Row="1"
                         IsBackButtonVisible="Collapsed"
-                        PaneDisplayMode="Left"
+                        PaneDisplayMode="Auto"
                         IsSettingsVisible="False"
                         PaneTitle="Music Player"
                         SelectionChanged="OnNavigationSelectionChanged">
@@ -155,7 +177,8 @@
                             Orientation="Horizontal"
                             Spacing="16"
                             VerticalAlignment="Center"
-                            Margin="0,8,24,0">
+                            Margin="0,8,24,0"
+                            MaxWidth="240">
 					<Border Width="64"
                             Height="64"
                             CornerRadius="8"
@@ -175,7 +198,8 @@
                                    Opacity="0.7" />
 					</StackPanel>
 
-					<ToggleButton Width="36"
+					<ToggleButton x:Name="FavoriteButton"
+                                  Width="36"
                                   Height="36"
                                   Margin="12,0,0,0"
                                   Background="Transparent"
@@ -186,14 +210,17 @@
 					</ToggleButton>
 				</StackPanel>
 
-				<!-- transport controls -->
-				<StackPanel Grid.Row="1"
-                            Grid.Column="1"
+				<!-- transport controls: span full width so they are centered relative to the whole playback area -->
+				<StackPanel x:Name="TransportControls"
+                            Grid.Row="1"
+                            Grid.Column="0"
+                            Grid.ColumnSpan="3"
                             Orientation="Horizontal"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             Spacing="12"
-                            Margin="0,8">
+                            Margin="0,8"
+                            Canvas.ZIndex="1">
 					<ToggleButton Width="36"
                                   Height="36"
                                   Background="Transparent"
@@ -228,8 +255,6 @@
 						</Button>
 					</Grid>
 
-
-
 					<Button Width="36"
                             Height="36"
                             Background="Transparent"
@@ -258,21 +283,66 @@
                             VerticalAlignment="Center"
                             Spacing="14"
                             Margin="24,8,0,0">
-					<StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
-						<FontIcon Glyph="&#xE15D;" FontSize="16" VerticalAlignment="Center" />
-						<Slider Width="120"
-                                Minimum="0"
-                                Maximum="100"
-                                Value="{x:Bind ViewModel.Volume, Mode=TwoWay}"
-                                IsThumbToolTipEnabled="False"
-                                VerticalAlignment="Center" />
-					</StackPanel>
-
-					<Button Width="36"
+					<Button x:Name="NarrowPrevious"
+                            Width="36"
+                            Height="36"
+                            Background="Transparent"
+                            BorderBrush="Transparent"
+                            Padding="0"
+                            Command="{x:Bind ViewModel.PreviousCommand}"
+                            Visibility="Collapsed">
+						<FontIcon Glyph="&#xE100;" FontSize="16" />
+					</Button>
+					<Grid x:Name="NarrowPlayPause" Visibility="Collapsed">
+						<Grid.Resources>
+							<SolidColorBrush x:Key="ButtonBorderBrushPointerOver" Color="{ThemeResource SystemAccentColor}" />
+							<SolidColorBrush x:Key="ButtonBorderBrushPressed" Color="{ThemeResource SystemAccentColor}" />
+							<SolidColorBrush x:Key="ButtonBorderBrushDisabled" Color="#66999999" />
+							<SolidColorBrush x:Key="ButtonBackgroundDisabled" Color="#19999999" />
+						</Grid.Resources>
+						<Button Width="50"
+                            Height="50"
+                            Style="{StaticResource PlayPauseButtonStyle}"
+                            Padding="0"
+                            Command="{x:Bind ViewModel.TogglePlayPauseCommand}">
+							<FontIcon Glyph="{x:Bind ViewModel.PlayPauseGlyph, Mode=OneWay}" FontSize="22" />
+						</Button>
+					</Grid>
+					<Button x:Name="NarrowNext"
+                            Width="36"
+                            Height="36"
+                            Background="Transparent"
+                            BorderBrush="Transparent"
+                            Padding="0"
+                            Command="{x:Bind ViewModel.NextCommand}"
+                            Visibility="Collapsed">
+						<FontIcon Glyph="&#xE101;" FontSize="16" />
+					</Button>
+					<Button x:Name="VolumeButton"
+                            Width="36"
                             Height="36"
                             Background="Transparent"
                             BorderBrush="Transparent"
                             Padding="0">
+						<FontIcon Glyph="&#xE15D;" FontSize="16" />
+						<Button.Flyout>
+							<Flyout>
+								<Slider Width="120"
+                                        Minimum="0"
+                                        Maximum="100"
+                                        Value="{x:Bind ViewModel.Volume, Mode=TwoWay}"
+                                        IsThumbToolTipEnabled="False" />
+							</Flyout>
+						</Button.Flyout>
+					</Button>
+
+					<Button x:Name="QueueButton"
+                            Width="36"
+                            Height="36"
+                            Background="Transparent"
+                            BorderBrush="Transparent"
+                            Padding="0"
+                            Visibility="Collapsed">
 						<FontIcon Glyph="&#xE14C;" FontSize="16" />
 					</Button>
 					<Button Width="36"
@@ -283,6 +353,7 @@
 						<FontIcon Glyph="&#xE115;" FontSize="16" />
 						<Button.Flyout>
 							<MenuFlyout>
+								<MenuFlyoutItem Text="Queue" />
 								<MenuFlyoutItem Text="Playback Settings" />
 								<MenuFlyoutItem Text="Audio Settings" />
 								<MenuFlyoutItem Text="About" />
